--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@fullcalendar/timegrid": "4.4.2",
     "@react-google-maps/api": "1.13.0",
     "animate.css": "3.7.2",
+    "axios": "^0.21.1",
     "bootstrap": "4.6.0",
     "chart.js": "2.9.4",
     "chartist": "0.11.4",
+    "cookie-parser": "^1.4.5",
     "core-js": "2.5.7",
     "cropper": "4.1.0",
     "d3": "3.5.17",
@@ -90,7 +92,7 @@
     "react-data-grid": "6.1.0",
     "react-datetime": "2.16.3",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "1.14.5",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-dropzone": "7.0.1",
     "react-flot": "1.3.0",
     "react-i18next": "11.8.10",
