--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "loaders.css": "0.1.2",
     "matchmedia": "0.1.2",
     "modernizr": "3.11.6",
-    "moment": "2.29.1",
+    "moment": "^2.29.1",
     "morris.js.so": "0.5.1",
     "nestable": "themicon/nestable",
     "pdfmake": "0.1.70",
