--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "i18next-browser-languagedetector": "2.2.4",
     "i18next-xhr-backend": "1.5.1",
     "ika.jvectormap": "themicon/ika.jvectormap",
+    "immutability-helper": "^3.1.1",
     "jqcloud2": "2.0.3",
     "jquery": "3.6.0",
     "jquery-knob": "1.2.11",
