--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react": "17.0.2",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-chartist": "0.14.4",
     "react-chartjs-2": "2.11.1",
     "react-color": "2.19.3",
@@ -100,6 +101,7 @@
     "react-flot": "1.3.0",
     "react-i18next": "11.8.10",
     "react-maskedinput": "4.0.1",
+    "react-number-format": "^4.6.0",
     "react-redux": "6.0.1",
     "react-router": "5.2.0",
     "react-router-bootstrap": "0.25.0",
