--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-i18next": "11.8.10",
     "react-maskedinput": "4.0.1",
     "react-number-format": "^4.6.0",
+    "react-pdf": "^5.3.0",
     "react-redux": "6.0.1",
     "react-router": "5.2.0",
     "react-router-bootstrap": "0.25.0",
