--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "datatables.net-bs4": "1.10.24",
     "datatables.net-buttons": "1.7.0",
     "datatables.net-buttons-bs": "1.7.0",
+    "datatables.net-dt": "^1.10.25",
     "datatables.net-keytable": "2.6.1",
     "datatables.net-keytable-bs": "2.6.1",
     "datatables.net-responsive": "2.2.7",
