--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "@themicon_co",
   "license": "https://wrapbootstrap.com/help/licenses",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
@@ -28,24 +28,12 @@
   "dependencies": {
     "@ashvin27/react-datatable": "^1.5.3",
     "@fortawesome/fontawesome-free": "5.15.3",
-    "@fullcalendar/bootstrap": "4.4.2",
-    "@fullcalendar/core": "4.4.2",
-    "@fullcalendar/daygrid": "4.4.2",
-    "@fullcalendar/interaction": "4.4.2",
-    "@fullcalendar/list": "4.4.2",
-    "@fullcalendar/react": "4.4.2",
-    "@fullcalendar/timegrid": "4.4.2",
-    "@react-google-maps/api": "1.13.0",
     "animate.css": "3.7.2",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
-    "chart.js": "2.9.4",
-    "chartist": "0.11.4",
     "cookie-parser": "^1.4.5",
-    "core-js": "2.5.7",
-    "cropper": "4.1.0",
+    "core.js": "^0.4.2",
     "d3": "3.5.17",
-    "datatables.net": "1.10.24",
     "datatables.net-bs": "1.10.24",
     "datatables.net-bs4": "1.10.24",
     "datatables.net-buttons": "1.7.0",
@@ -62,7 +50,6 @@
     "flot": "themicon/flot",
     "get-size": "2.0.3",
     "history": "4.10.1",
-    "html5sortable": "0.11.1",
     "i18next": "12.1.0",
     "i18next-browser-languagedetector": "2.2.4",
     "i18next-xhr-backend": "1.5.1",
@@ -76,7 +63,6 @@
     "jquery.easing": "1.4.1",
     "jquery.flot.spline": "themicon/jquery.flot.spline",
     "jquery.flot.tooltip": "github:krzysu/flot.tooltip",
-    "js-storage": "1.1.0",
     "jszip": "3.6.0",
     "loaders.css": "0.1.2",
     "matchmedia": "0.1.2",
