--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@ashvin27/react-datatable": "^1.5.3",
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@sweetalert/with-react": "^0.1.1",
     "animate.css": "3.7.2",
     "axios": "^0.21.1",
     "bootstrap": "4.6.0",
