--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-chartist": "0.14.4",
     "react-chartjs-2": "2.11.1",
     "react-color": "2.19.3",
+    "react-csv": "^2.0.3",
     "react-data-grid": "6.1.0",
     "react-datetime": "2.16.3",
     "react-dom": "17.0.2",
