--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
+    "eject": "react-scripts eject",
     "build-modernizr": "modernizr -c modernizr-config.json -d src/modernizr.js -u",
     "build-themes": "node-sass-chokidar src/styles/themes -o public/themes -w",
     "lint": "react-app-rewired lint",
+     
     "postinstall-heroku": "npm run build"
   },
   "eslintConfig": {
