--- a/package.json
+++ b/package.json
@@ -1,130 +1,257 @@
 {
+
   "name": "angle",
+
   "version": "0.0.0",
+
   "description": "Angle - Bootstrap Admin Template",
+
   "author": "@themicon_co",
+
   "license": "https://wrapbootstrap.com/help/licenses",
+
   "private": true,
+
   "homepage": "/",
+
   "scripts": {
+
     "start": "react-app-rewired start",
+
     "build": "react-app-rewired build",
+
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
+
+    "eject": "react-app-rewired eject",
+
     "build-modernizr": "modernizr -c modernizr-config.json -d src/modernizr.js -u",
+
     "build-themes": "node-sass-chokidar src/styles/themes -o public/themes -w",
+
     "lint": "react-app-rewired lint",
-     
+
     "postinstall-heroku": "npm run build"
+
   },
+
   "eslintConfig": {
+
     "extends": "react-app"
+
   },
+
   "browserslist": [
+
     ">0.2%",
+
     "not dead",
+
     "not ie <= 11",
+
     "not op_mini all"
+
   ],
+
   "dependencies": {
+
     "@ashvin27/react-datatable": "^1.5.3",
+
     "@fortawesome/fontawesome-free": "5.15.3",
+
     "@sweetalert/with-react": "^0.1.1",
+
     "animate.css": "3.7.2",
+
     "axios": "^0.21.1",
+
     "bootstrap": "4.6.0",
+
     "cookie-parser": "^1.4.5",
+
     "core.js": "^0.4.2",
+
     "d3": "3.5.17",
+
     "datatables.net-bs": "1.10.24",
+
     "datatables.net-bs4": "1.10.24",
+
     "datatables.net-buttons": "1.7.0",
+
     "datatables.net-buttons-bs": "1.7.0",
+
     "datatables.net-dt": "^1.10.25",
+
     "datatables.net-keytable": "2.6.1",
+
     "datatables.net-keytable-bs": "2.6.1",
+
     "datatables.net-responsive": "2.2.7",
+
     "datatables.net-responsive-bs": "2.2.7",
+
     "deep-equal": "1.1.1",
+
     "draft-js": "0.11.7",
+
     "easy-pie-chart": "2.1.7",
+
     "element-closest": "3.0.2",
+
     "flot": "themicon/flot",
+
     "get-size": "2.0.3",
+
     "history": "4.10.1",
+
     "i18next": "12.1.0",
+
     "i18next-browser-languagedetector": "2.2.4",
+
     "i18next-xhr-backend": "1.5.1",
+
     "ika.jvectormap": "themicon/ika.jvectormap",
+
     "immutability-helper": "^3.1.1",
+
     "jqcloud2": "2.0.3",
+
     "jquery": "3.6.0",
+
     "jquery-knob": "1.2.11",
+
     "jquery-slimscroll": "1.3.8",
+
     "jquery-sparkline": "2.4.0",
+
     "jquery.easing": "1.4.1",
+
     "jquery.flot.spline": "themicon/jquery.flot.spline",
+
     "jquery.flot.tooltip": "github:krzysu/flot.tooltip",
+
     "jszip": "3.6.0",
+
     "loaders.css": "0.1.2",
+
     "matchmedia": "0.1.2",
+
     "modernizr": "3.11.6",
+
     "moment": "^2.29.1",
+
     "morris.js.so": "0.5.1",
+
     "nestable": "themicon/nestable",
+
     "pdfmake": "0.1.70",
+
     "raf": "3.4.1",
+
     "raphael": "2.3.0",
+
     "rc-slider": "8.7.1",
+
     "react": "17.0.2",
+
     "react-bootstrap-table-next": "^4.0.3",
+
     "react-bootstrap-table2-paginator": "^2.1.2",
+
     "react-bootstrap-table2-toolkit": "^2.1.3",
+
     "react-chartist": "0.14.4",
+
     "react-chartjs-2": "2.11.1",
+
     "react-color": "2.19.3",
+
     "react-csv": "^2.0.3",
+
     "react-data-grid": "6.1.0",
+
     "react-datetime": "2.16.3",
+
     "react-dom": "17.0.2",
+
     "react-draft-wysiwyg": "^1.14.7",
+
     "react-dropzone": "7.0.1",
+
     "react-flot": "1.3.0",
+
     "react-i18next": "11.8.10",
+
     "react-maskedinput": "4.0.1",
+
     "react-number-format": "^4.6.0",
+
     "react-pdf": "^5.3.0",
+
     "react-redux": "6.0.1",
+
     "react-router": "5.2.0",
+
     "react-router-bootstrap": "0.25.0",
+
     "react-router-dom": "5.2.0",
+
     "react-select": "3.2.0",
+
     "react-spinners": "^0.11.0",
+
     "react-toastify": "4.5.2",
+
     "react-transition-group": "4.4.1",
+
     "reactstrap": "8.9.0",
+
     "redux": "4.0.5",
+
     "rtlcss": "2.6.2",
+
     "screenfull": "3.3.3",
+
     "simple-line-icons": "2.5.5",
+
     "spinkit": "1.2.5",
+
     "sweetalert": "2.1.2",
+
     "sweetalert2": "^11.0.12",
+
     "sweetalert2-react-content": "^4.0.1",
+
     "validator": "10.11.0",
+
     "weather-icons": "github:erikflowers/weather-icons",
+
     "web-vitals": "0.2.4",
+
     "whirl": "github:themicon/whirl"
+
   },
+
   "devDependencies": {
+
     "acorn-dynamic-import": "3.0.0",
+
     "imports-loader": "0.8.0",
+
     "node-sass": "4.14.1",
+
     "raw-loader": "0.5.1",
+
     "react-app-rewired": "2.1.8",
+
     "react-scripts": "4.0.3",
+
     "sass-loader": "7.3.1",
+
     "style-loader": "0.23.1",
+
     "webpack-bundle-analyzer": "3.9.0"
+
   }
+
 }
